# trading-council-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: rules.yaml
src/trading_council/: __init__.py  audit.py  cli.py  db.py  execution.py  models.py  proposals.py  reconcile.py  reports.py  research.py  risk.py  rules.py  settings.py  votes.py  voting.py
src/trading_council/broker/: __init__.py  alpaca.py  base.py
tests/: test_alpaca_adapter.py  test_audit.py  test_broker_base.py  test_cli.py  test_cli_alpaca.py  test_db.py  test_execution_staging.py  test_execution_submit.py  test_models.py  test_proposals.py  test_reconcile.py  test_reports.py  test_research.py  test_risk.py  test_rules.py  test_settings.py  test_votes_service.py  test_voting.py  test_weekly_recap.py
